# Mobile-Dev-Toolkit

./: .gitignore  index.html  package.json  pnpm-lock.yaml  tailwind.config.js
.cursor/: .cursorignore
.cursor/rules/: constitutions.mdc
docs/: Architecture Constraints.md  Architecture Review.md  PRD.md
src/: App.tsx  main.tsx
src-tauri/: -  Cargo.toml  tauri.conf.json
src-tauri/resources/tools/: README.md  adb  idevice_id
src-tauri/src/: adb.rs  dependencies.rs  executor.rs  hdc.rs  main.rs  tools.rs
src/app/: bootstrap.ts
src/core/: index.ts  kernel.ts
src/core/adapters/: androidDeviceAdapter.ts  deviceAdapter.ts  harmonyosDeviceAdapter.ts  iosDeviceAdapter.ts  registry.ts  tauriSystemAdapter.ts  types.ts
src/core/device/: types.ts
src/core/events/: eventBus.ts  events.ts
src/core/modules/: loader.ts  manager.ts  registry.ts  types.ts
src/core/system/: types.ts
src/modules/: builtinProvider.ts  registerViews.ts
src/modules/app-manager/: AppManagerView.tsx  definition.ts
src/modules/base64-codec/: Base64CodecView.tsx  definition.ts
src/modules/certificate-manager/: CertificateManagerView.tsx  definition.ts
src/modules/device-manager/: DeviceManagerView.tsx  definition.ts
src/modules/file-explorer/: FileExplorerView.tsx  definition.ts
src/modules/json-formatter/: JsonFormatterView.tsx  definition.ts
src/modules/screen-recorder/: ScreenRecorderView.tsx  (+1 more)
src/ui/: DeviceSelector.tsx  ErrorBoundary.tsx  KernelUI.tsx  ModuleNavigation.tsx  ModuleViewHost.tsx  ModuleWorkspace.tsx  useModuleManagerSnapshot.ts  viewRegistry.ts
(+5 files in other folders)
